sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() { val = getNombreValeurs() -2
^AlgCocktailSort1:2: error: expected class or object definition
def cocktailSort() { val = getNombreValeurs() -2
^